secgrp.tf
resource "aws_security_group" "vprofile-bean-elb-sg" {
  name = "vprofile-bean-elb-sg"
  description = "Security group for bean-elb"
  vpc_id = module.vpc.vpc_id
  egress {
    from_port=0
    protocol="-1"
    to_port=0
    cidr_block=["0.0.0.0/0"]
  }
  ingress {
    from_port=80
    protocol="tcp"
    to_port=80
    cidr_block=["0.0.0.0/0"]
  }
}
resource "aws_security_group" "vprofile-bastion-sg" {
  name = "vprofile-bastion-sg"
  description = "Security group for bastionisioner ec2 instance"
  vpc_id = module.vpc.vpc_id
  egress {
    from_port=0
    protocol="-1"
    to_port=0
    cidr_block=["0.0.0.0/0"]
  }
  ingress {
    from_port=22
    protocol="tcp"
    to_port=22
    cidr_block=[var.MyIP]
  }
}
resource "aws_security_group" "vprofile-prod-sg" {
  name = "vprofile-prod-sg"
  description = "Security group for beanstalk instance"
  vpc_id = module.vpc.vpc_id
  egress {
    from_port=0
    protocol="-1"
    to_port=0
    cidr_block=["0.0.0.0/0"]
  }
  ingress {
    from_port=22
    protocol="tcp"
    to_port=22
    cidr_block=[aws_security_group.vprofile-bastion-sg.id]
  }
}
resource "aws_security_group" "vprofile-backend-sg" {
  name = "vprofile-backend-sg"
  description = "Security group for RDS, active ng,elastic cache"
  vpc_id = module.vpc.vpc_id
  egress {
    from_port=0
    protocol="-1"
    to_port=0
    cidr_block=["0.0.0.0/0"]
  }
  ingress {
    from_port=0
    protocol="tcp"
    to_port=0
    cidr_block=[aws_security_group.vprofile-prod-sg.id]
  }
}
resource "aws_security_group_rule" "sec_group_allow_itself" {
  from_port         = 0
  protocol          = "tcp"
  security_group_id = aws_security_group.vprofile-backend-sg.id
  source_security_group_id = aws_security_group.vprofile-backend-sg.id
  to_port           = 65535
  type              = "ingress"
}
